<?xml version="1.0"?>
<package format="2">
  <name>serial_communication</name>
  <version>0.0.0</version>
  <description>Package for interface between the ROS and serial port</description>

  <maintainer email="nestor-dp@hotmail.com">Nestor D. Pereira Neto</maintainer>

  <license>GNU GPL</license>

  <author email="nestor-dp@hotmail.com">Nestor D. Pereira Neto</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <exec_depend>message_runtime</exec_depend>
  
  <export>
  </export>

</package>
